# sso-mib

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  REUSE.toml  flake.nix  meson.build  meson_options.txt
.github/workflows/: build.yml
LICENSES/: MIT.txt
debian/: changelog  control  libsso-mib0.symbols  sso-mib-gch-smtp-o365.install  sso-mib-tool.bash-completion  sso-mib-tool.install
docs/: doxygen.in  meson.build
examples/: meson.build
examples/avatar/: main.c
examples/onedrive/: main.c
examples/smtp-o365/: main.c
include/: mib-account.h  mib-client-app.h  mib-exports.h  mib-pop-params.h  mib-prt-sso-cookie.h  mib-prt.h  sso-mib.h
nix/: overlays.nix  sso-mib.nix
src/: base64.c  base64.h  mib-account-impl.h  mib-account.c  mib-client-app-impl.h  mib-client-app.c  mib-pop-params-impl.h  mib-pop-params.c  mib-prt-impl.h  mib-prt-sso-cookie-impl.h  mib-prt-sso-cookie.c  mib-prt.c  mib-utils.c  mib-utils.h  sso-mib-tool.c
